# catkin_workspace

./: .gitignore  Makefile  Makefile.cfg  README.md
.catkin_tools/profiles/debug/: config.yaml
.catkin_tools/profiles/reldebug/: config.yaml
src/: .rosinstall
src/package_a/: CMakeLists.txt  package.xml
src/package_a/config/: base_config.yaml
src/package_b/: CMakeLists.txt  package.xml
src/package_b/config/: extended_config.yaml
src/package_b/launch/: node.launch
src/package_c/: .gitignore  CMakeLists.txt  package.xml
src/package_c/launch/: node.launch
src/package_c/src/: node.cpp
