<?xml version="1.0"?>
<package format="2">
  <name>package_c</name>
  <version>0.0.0</version>
  <description>The package_c package</description>

  <maintainer email="asherikov@yandex.com">Alexander Sherikov</maintainer>

  <license>Apache 2.0</license>


  <buildtool_depend>catkin</buildtool_depend>

  <depend>staticoma</depend>
  <depend>ariles2_yamlcpp_catkin</depend>
  <depend>package_b</depend>
  <depend>roscpp</depend>

</package>
